crates/hir-ty/tests/snapshots/jls_qualified_new__qualified_new_inner_class.snap
---
source: crates/hir-ty/tests/jls_qualified_new.rs
expression: out
---
FILE /src/com/example/Q.java:
package com.example;

class Q {
    static class A {
        class B {}
    }

    static A a;

    static Object make() {
        return a.new B();
    }
}
