crates/hir-ty/tests/snapshots/jls_qualified_new__qualified_new_member_not_lexical.snap
---
source: crates/hir-ty/tests/jls_qualified_new.rs
expression: out
---
FILE /src/com/example/Q.java:
package com.example;

class Q {
    static class A {
        class B {}
    }

    static class B {}

    static A a;

    static Object make() {
        return a.new B();
    }
}
